--- a/SwiftTicTacToe/SwiftTicTacToe/Podfile
+++ b/SwiftTicTacToe/SwiftTicTacToe/Podfile
@@ -2,8 +2,8 @@ platform :ios, '9.0'
 use_frameworks!
 
 def testing_pods
-    pod 'Quick', '~> 0.6.0'
-    pod 'Nimble', '2.0.0-rc.3'
+    pod 'Quick', '~> 0.8.0'
+    pod 'Nimble', '~>3.0.0'
 end
 
 target 'SwiftTicTacToeTests' do
